basic rails setup completed

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,9 +6,13 @@ default: &default
 development:
   <<: *default
   database: actioncable_poc_development
+  username: riyer
+
 test:
   <<: *default
   database: actioncable_poc_test
+  username: riyer
+
 production:
   <<: *default
   database: actioncable_poc_production
