--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,5 +1,8 @@
 development:
-  adapter: redis://localhost:6379/1
+  # adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: actioncable_poc_development
 
 test:
   adapter: test
